Bug 143199 - template doesn't change when changing identity
Summary: template doesn't change when changing identity
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: templates (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-19 02:46 UTC by Marcus Willander
Modified: 2009-07-24 16:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Willander 2007-03-19 02:46:40 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Fedora RPMs
OS:                Linux

I have set up to identitys one in english and one in swedish. I have set up different templates for replay and so on for the two like this:

identity(swedish)(default)
replay template:
På söndagen den 13:e skrev du:

identity(english)
replay template:
On Sunday the 13:th, you wrote

The problem is that the template doesn't change when changing identity. So if i want to replay to an english mail I change the identity to the english one but the replay template doesn't change with it. The footer change, but not the template. Also note bug report 141200 on the language which is really important to fix.
Comment 1 Thomas McGuire 2007-03-19 11:24:14 UTC
Adding Dmitry to the CC list.
Dmitry, there are some template bugs reported, do you plan to fix them?
Comment 2 Marcus Willander 2007-04-20 01:14:20 UTC
Is this bug forgotten? It's an important bug because it's not nice to send mail's that looks I have described above. Can you at least confirm it? 

Thanks in advance!
//Marcus
Comment 3 Thomas McGuire 2007-07-17 13:38:52 UTC
Mass-changing component to "templates" and adding original template author to 
CC list.
Comment 4 Dawid Wróbel 2009-03-11 16:19:38 UTC
This bug is still present in kmail as of version 1.11.1
Comment 5 Jonathan Armond 2009-06-24 14:00:30 UTC
SVN commit 986221 by jarmond:

Apply new template when switching identity in the message composer, as long
the message has not been modified. NB: changing identity no longer marks
message as modified.

BUG: 143199

 M  +6 -4      composer.h  
 M  +15 -15    kmcommands.cpp  
 M  +65 -9     kmcomposewin.cpp  
 M  +10 -2     kmcomposewin.h  
 M  +1 -1      kmkernel.cpp  
 M  +2 -2      kmmainwidget.cpp  
 M  +7 -0      templateparser.cpp  
 M  +2 -0      templateparser.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=986221
Comment 6 Jonathan Armond 2009-07-24 16:05:18 UTC
SVN commit 1001922 by jarmond:

Reapply template on switching identity in composer. Respect custom
templates when forwarding inline.

BUG: 143199
BUG: 179754
BUG: 186843

 M  +18 -4     composer.h  
 M  +24 -17    kmcommands.cpp  
 M  +91 -9     kmcomposewin.cpp  
 M  +24 -2     kmcomposewin.h  
 M  +1 -1      kmkernel.cpp  
 M  +2 -2      kmmainwidget.cpp  
 M  +7 -0      templateparser.cpp  
 M  +2 -0      templateparser.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1001922