Apply new template when switching identity in the message composer, as long the message has not been modified. NB: changing identity no longer marks message as modified.

BUG: 143199

svn path=/trunk/KDE/kdepim/; revision=986221