kmcommands.cpp
@@ -480,7 +480,7 @@ KMCommand::Result KMMailtoComposeCommand::execute()
   msg->setCharset("utf-8");
   msg->setTo( KMail::StringUtil::decodeMailtoUrl( mUrl.path() ) );
 
-  KMail::Composer * win = KMail::makeComposer( msg, id );
+  KMail::Composer * win = KMail::makeComposer( msg, KMail::Composer::New, id );
   win->setCharset("", true);
   win->setFocusToSubject();
   win->show();
@@ -505,7 +505,7 @@ KMCommand::Result KMMailtoReplyCommand::execute()
   KMMessage *rmsg = msg->createReply( KMail::ReplyNone, mSelection );
   rmsg->setTo( KMail::StringUtil::decodeMailtoUrl( mUrl.path() ) );
 
-  KMail::Composer * win = KMail::makeComposer( rmsg, 0 );
+  KMail::Composer * win = KMail::makeComposer( rmsg, KMail::Composer::Reply );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus();
   win->show();
@@ -530,7 +530,7 @@ KMCommand::Result KMMailtoForwardCommand::execute()
   KMMessage *fmsg = msg->createForward();
   fmsg->setTo( KMail::StringUtil::decodeMailtoUrl( mUrl.path() ) );
 
-  KMail::Composer * win = KMail::makeComposer( fmsg );
+  KMail::Composer * win = KMail::makeComposer( fmsg, KMail::Composer::Forward );
   win->setCharset( msg->codec()->name(), true );
   win->show();
 
@@ -1101,7 +1101,7 @@ KMCommand::Result KMReplyToCommand::execute()
     return Failed;
   }
   KMMessage *reply = msg->createReply( KMail::ReplySmart, mSelection );
-  KMail::Composer * win = KMail::makeComposer( reply );
+  KMail::Composer * win = KMail::makeComposer( reply, KMail::Composer::Reply );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus();
   win->show();
@@ -1124,7 +1124,7 @@ KMCommand::Result KMNoQuoteReplyToCommand::execute()
     return Failed;
   }
   KMMessage *reply = msg->createReply( KMail::ReplySmart, "", true);
-  KMail::Composer *win = KMail::makeComposer( reply );
+  KMail::Composer *win = KMail::makeComposer( reply, KMail::Composer::Reply );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus( false );
   win->show();
@@ -1147,7 +1147,7 @@ KMCommand::Result KMReplyListCommand::execute()
     return Failed;
   }
   KMMessage *reply = msg->createReply( KMail::ReplyList, mSelection );
-  KMail::Composer * win = KMail::makeComposer( reply );
+  KMail::Composer * win = KMail::makeComposer( reply, KMail::Composer::ReplyToAll );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus( false );
   win->show();
@@ -1170,7 +1170,7 @@ KMCommand::Result KMReplyToAllCommand::execute()
     return Failed;
   }
   KMMessage *reply = msg->createReply( KMail::ReplyAll, mSelection );
-  KMail::Composer * win = KMail::makeComposer( reply );
+  KMail::Composer * win = KMail::makeComposer( reply, KMail::Composer::ReplyToAll );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus();
   win->show();
@@ -1193,7 +1193,7 @@ KMCommand::Result KMReplyAuthorCommand::execute()
     return Failed;
   }
   KMMessage *reply = msg->createReply( KMail::ReplyAuthor, mSelection );
-  KMail::Composer * win = KMail::makeComposer( reply );
+  KMail::Composer * win = KMail::makeComposer( reply, KMail::Composer::Reply );
   win->setCharset( msg->codec()->name(), true );
   win->setReplyFocus();
   win->show();
@@ -1292,7 +1292,7 @@ KMCommand::Result KMForwardCommand::execute()
       // THIS HAS TO BE AFTER setCte()!!!!
       msgPart->setBodyEncoded(msgPartText.toAscii());
       KCursorSaver busy(KBusyPtr::busy());
-      KMail::Composer * win = KMail::makeComposer( fwdMsg, id );
+      KMail::Composer * win = KMail::makeComposer( fwdMsg, KMail::Composer::NoTemplate, id );
       win->addAttach(msgPart);
       win->show();
       return OK;
@@ -1323,7 +1323,7 @@ KMCommand::Result KMForwardCommand::execute()
       }
 
       KCursorSaver busy(KBusyPtr::busy());
-      KMail::Composer * win = KMail::makeComposer( fwdMsg, id );
+      KMail::Composer * win = KMail::makeComposer( fwdMsg, KMail::Composer::NoTemplate, id );
       win->setCharset("");
       win->show();
       return OK;
@@ -1345,7 +1345,7 @@ KMCommand::Result KMForwardCommand::execute()
   if ( id == 0 )
     id = mIdentity;
   {
-    KMail::Composer * win = KMail::makeComposer( fwdMsg, id );
+    KMail::Composer * win = KMail::makeComposer( fwdMsg, KMail::Composer::Forward, id );
     win->setCharset( fwdMsg->codec()->name(), true );
     win->show();
   }
@@ -1388,7 +1388,7 @@ KMCommand::Result KMForwardAttachedCommand::execute()
 
   KCursorSaver busy(KBusyPtr::busy());
   if (!mWin)
-    mWin = KMail::makeComposer(fwdMsg, mIdentity);
+    mWin = KMail::makeComposer(fwdMsg, KMail::Composer::Forward, mIdentity);
 
   // iterate through all the messages to be forwarded
   KMMessage *msg;
@@ -1549,7 +1549,7 @@ KMCommand::Result KMCustomForwardCommand::execute()
     }
 
     KCursorSaver busy( KBusyPtr::busy() );
-    KMail::Composer * win = KMail::makeComposer( fwdMsg, id );
+    KMail::Composer * win = KMail::makeComposer( fwdMsg, KMail::Composer::Forward, id );
     win->setCharset("");
     win->show();
 
@@ -1567,7 +1567,7 @@ KMCommand::Result KMCustomForwardCommand::execute()
     if ( id == 0 )
       id = mIdentity;
     {
-      KMail::Composer * win = KMail::makeComposer( fwdMsg, id );
+      KMail::Composer * win = KMail::makeComposer( fwdMsg, KMail::Composer::Forward, id );
       win->setCharset( fwdMsg->codec()->name(), true );
       win->show();
     }
@@ -2354,7 +2354,7 @@ KMCommand::Result KMUrlClickedCommand::execute()
     if ( !cc.isEmpty() )
       msg->setCc( cc );
 
-    KMail::Composer * win = KMail::makeComposer( msg, mIdentity );
+    KMail::Composer * win = KMail::makeComposer( msg, KMail::Composer::New, mIdentity );
     win->setCharset("", true);
     win->show();
   }
